# voice_assistant

./: TODO
backend/: pyproject.toml
backend/src/: Modelfile  main.py
backend/src/utils/: VideoTranscriber.py
backend/tmp/: transcription.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Assistant.tsx
