[tool.poetry]
name = "audio-assistant-backend"
version = "0.1.0"
description = ""
authors = ["shavs2077 <salva.neva96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faster-whisper = "^1.1.0"
transformers = "^4.47.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
